updates wmhtf link

--- a/src/pages/west-midlands/index.hbs
+++ b/src/pages/west-midlands/index.hbs
@@ -66,7 +66,7 @@ page: home
     <h1 class="h1">WMCA Homelessness Taskforce</h1>
     <p>In 2017 the first Mayor of the West Midlands, Andy Street, established the WMCA Homelessness Taskforce with the explicit commitment to bring together organisations, people and resources to tackle homelessness in partnership with the 7 Local Authorities in the region.   Since its inception the Homelessness Taskforce has worked on a wide range of issues and initiatives ranging from Housing First through to research work on Families in Temporary Accommodation. </p>
     <p>The Taskforce has developed new tools and resources to help organisations and service systems maximise the impact they can have on homelessness prevention, which you can find by following the link below.  All our work focuses on Designing out Homelessness from policy, practice and planning by Designing in Prevention so that we collectively make homelessness rare, brief and non-recurring. </p>
-    <a href="https://wmhtf.net" class="btn btn--brand-d">
+    <a href="https://www.wmca.org.uk/what-we-do/wmca-homelessness-taskforce/" class="btn btn--brand-d">
       <span class="btn__text">Learn more</span>
     </a>
   </div>
