updates volunteer text on wm homepage

--- a/src/pages/west-midlands/index.hbs
+++ b/src/pages/west-midlands/index.hbs
@@ -94,7 +94,7 @@ page: home
       <article class="card card--cta card--grid-1-of-4">
         <a href="/give-help/volunteer/" class="full-size-link">
           <h2 class="h2 card__title card__title--hand">Volunteer</h2>
-          <p>Volunteer at one of the winter shelters across the West Midlands.</p>
+          <p>Volunteer at one of the local charities across the West Midlands</p>
           <button class="btn btn--brand-e btn--always-full">
             <span class="btn__text">Volunteer</span>
           </button>
