adds clarity to give help

--- a/src/partials/give-help/offer-items.hbs
+++ b/src/partials/give-help/offer-items.hbs
@@ -1,7 +1,7 @@
 <h3 id="form-scroll" class="h2 requests-detail__heading requests-detail__heading--i-want-to-volunteer">I Have Items/Food to Offer!</h3>
 <div class="block block--requests-detail" data-bind="with: offerItemsForm">
   <div class="container">
-    <div class="block__content">
+    <div id="about-form" class="block__content">
       <!-- ko ifnot: isSubmitted -->
     	<form id="js-form" class="form form--volunteer" data-bind="submit: submitForm">
 	    	<fieldset class="form__fieldset">
