--- a/src/partials/header-nav.hbs
+++ b/src/partials/header-nav.hbs
@@ -32,7 +32,7 @@
                 <a href="/give-help/">Give Help</a>
             </li>
             <li class="nav__item nav__item--sub-item nav__item--giveitems">
-                <a href="/give-help/help/">Help</a>
+                <a href="/give-help/help/">What's Needed?</a>
             </li>
             <li class="nav__item nav__item--sub-item nav__item--donate">
                 <a href="/give-help/donate/">Donate Money</a>
