--- a/src/pages/give-help/offer-items/index.hbs
+++ b/src/pages/give-help/offer-items/index.hbs
@@ -25,8 +25,12 @@ page: offeritems
       <div class="block__content" data-bind="with: orgRetrieval">
         <header class="multi-form-header">
           <h1 class="h1">Offer Items/Food</h1>
-          <p>Organisations and charities are always in need of items to help with a wide variety of tasks and services. This can range from hot drink supplies to IT equipment. If you have any items that you think may be useful, please select a suitable organisation and consult their donation information.</p>
-          <p class="bold">If you can not find a suitable organisation, please fill in the form below, and when an organisation has interest in your offer, they can get in touch.</p>
+          <p>Some items are welcomed by charities all year round. These items can be viewed using the <a href="#offer-map">map</a> below. Please use the filters to narrow down what items are accepted where.
+          Sometimes there are specific items needed by charities urgently, such as a food bank running low on UHT milk or tinned food etc. Click the button to see what is urgently needed now and how to donate those items.</p>
+          <a href="/give-help/help/?type=Items" class="btn btn--brand-d">
+            <span class="btn__text">See what's needed</span>
+          </a>
+          <p class="bold">Alternatively, if you have an item to offer and you cannot find a suitable organisation to give it to, please fill in the <a href="#about-form">form</a> below, and when or if an organisation has interest in your offer, they can get in touch. These offers will expire after three months.</p>
           <p class="bold">Please note: Organisations are generally unable to accept used bedding (pillows, duvets, mattresses etc) as there are strict fire safety requirements.</p>
           <!-- ko ifnot: postcode -->
           <p>Please enter a postcode to find organisations near you.</p>
@@ -37,7 +41,7 @@ page: offeritems
     </div>
   </div>
 
-  <div class="block block--cards">
+  <div id="offer-map" class="block block--cards">
     <div class="container">
       <div class="block__content" data-bind="with: orgRetrieval">
         <!-- ko ifnot: hasOrgs -->
