adds zahara to team page

--- a/src/pages/about/our-team/index.hbs
+++ b/src/pages/about/our-team/index.hbs
@@ -159,6 +159,12 @@ page: team
           <p class="team-card__content">I recently graduated in Economics and Econometrics and have wanted to scratch my data handling itch since graduating. I feel happiest when I'm active and engaged, so I'm desperate to utilize my skills.</p>
         </div>
 
+        <div class="team-card">
+          <img class="team-card__img" src="/assets/img/mugshots/zahara.jpg" alt="">
+          <h1 class="team-card__heading">Zahara Elj</h1>
+          <p class="team-card__content">I am a mum of two with great attention to detail and am literally in love with being organised! Giving back to the community is part of my everyday life and I appreciate the autonomy of data handling while helping others. I firmly believe that volunteering has a positive impact on the person giving, the person receiving and the community as a whole; I am very happy supporting the task that Street Support Network have set themselves while gaining new skills.</p>
+        </div>
+
       </div>
     </div>
   </div>
