updates business partnerships page

--- a/src/pages/give-help/business-support/index.hbs
+++ b/src/pages/give-help/business-support/index.hbs
@@ -31,7 +31,7 @@ page: partnership
   <div class="container">
     <h2 class="h2">How your business can help?</h2>
 
-    <p>The UK has a vibrant and varied business network that we know genuinely cares about homelessness and rough sleeping on our streets.</p>
+    <p>The UK has a vibrant and varied business network that we know genuinely cares about homelessness.</p>
 
     <p>To help us tackle homelessness in your area and to continue to develop Street Support Network, and bring change in our featured locations, we need local businesses to partner with us, offer us practical support and/or raise funds for us.</p>
 
@@ -39,22 +39,25 @@ page: partnership
 
     <p>Homelessness has reached crisis levels in many UK cities. Ongoing cuts to services, along with limited resources, has meant that organisations are finding it difficult to cope. They need to co-ordinate and increase the support they provide, but this isn’t easy. Street Support Network supports the whole system by increasing resources and making it easier for people to get help and give help.</p>
 
-    <p>We work closely with over 850 organisations across the country. We know what organisations need, to improve their service, and what the homeless community need to improve their situation. We need your company to support us, while also raising your company profile and fulfilling your corporate social responsibility.</p>
+    <p>We work closely with over 1600 organisations across the country. We know what organisations need to improve their service, and what the homelessness community need to improve their situation.</p>
+
+    <p>Your business can support us, whilst also raising your company profile and fulfilling your corporate social responsibility. This can be done in lots of different ways:</p>
 
     <ul>
-      <li>Sponsor one of our local partnerships events or projects.</li>
-      <li>Offer support in-kind by donating your time,  professional expertise, desk space, meeting and event venue spaces.</li>
-      <li>Research and communicate what is currently needed, connecting to available resources and volunteers.</li>
-      <li>Develop and improve the website and app, co-producing new features with the homeless community.</li>
-      <li>Pay skilled and experienced digital experts (who all work at reduced rates).</li>
-      <li>The Street Support <a href="/give-help">Give Help</a> section shows what local charities currently need to sustain and improve their services. Service needs can be anything from singular items such as pairs of socks or one-off volunteering opportunities, through to regular donations and volunteer support.</li>
+      <li>Sponsor one of our local partnerships events or projects</li>
+      <li>Offer support in-kind by donating your time, professional expertise, desk space, meeting and event venue spaces</li>
+      <li>Research and communicate what is currently needed, connecting to available resources and volunteers</li>
+      <li>Develop and improve the website and app, co-producing new features with the homelessness community</li>
+      <li>Pay skilled and experienced digital experts (who all work at reduced rates)</li>
     </ul>
 
-    <h2 class="h2">How you can help</h2>
+    <p>The <a href="/give-help/">Give Help</a> section of our site shows what local charities currently need to sustain and improve their services. Service needs can be anything from singular items such as pairs of socks or one-off volunteering opportunities, through to regular donations and volunteer support.</p>
+
+    <h2 class="h2">How can you help?</h2>
 
     <p>Through partnership working, there is now a clear mission and a network of collaboration, with people who have personally experienced homelessness included at every level. There is a real chance to improve the situation in the city, but resources are limited. We need funding and strong partnerships to enable us to support this process.</p>
 
-    <p>Here are some ways you can get involved with our local Business Network in the locations we operate at:</p>
+    <p>Here are some examples of ways you could get involved with our local Business Network in the locations we operate at:</p>
 
     <h3 class="h3"><a href="/cambridgeshire">Cambridgeshire</a></h3>
 
@@ -106,9 +109,9 @@ page: partnership
 
     <h2 class="h2">Can your business help Street Support Network?</h2>
 
-    <p>There are many ways for businesses who share our mission and values to work with us to get the best for your business, employees, community and organisational objectives. Our partners play a remarkable role in helping us with our mission to tackle homelessness. We’d love to start a conversation with you, you can contact our co-founder Gary Dunstan on <a href="mailto:gary@streetsupport.net">gary@streetsupport.net</a>.</p>
+    <p>There are many ways for businesses who share our mission and values to work with us to get the best for your business, employees, community and organisational objectives. Our partners play a remarkable role in helping us with our mission to tackle homelessness. We’d love to start a conversation with you, just send us a quick email on <a href="mailto:info@streetsupport.net">info@streetsupport.net</a>.</p>
 
-    <p>In addition to the ongoing work that is needed, the organisations, and homeless community have more ideas for features that they feel would be useful. We need your help so we can work alongside these groups to co-produce solutions, and continue to make a real difference.</p>
+    <p>In addition to the ongoing work that is needed, the organisations, and homelessness community have more ideas for features that they feel would be useful. We need your help so we can work alongside these groups to co-produce solutions, and continue to make a real difference.</p>
 
     <a class="btn btn--brand-e" href="https://www.justgiving.com/streetsupportnetwork">
       <span class="btn__text">Donate to Street Support</span>
