--- a/src/pages/about/index.hbs
+++ b/src/pages/about/index.hbs
@@ -29,18 +29,21 @@ page: about
 <div class="block">
   <div class="container">
     <div class="block__content">
-      <p>Street Support Network works online and offline, connecting and supporting local people and organisations to Tackle Homelessness.</p>
-      <p>Our vision is a citizen-led network, where people with personal insight into homelessness, decision makers and people with resources co-create effective solutions together.</p>
-      <p>This website is a central place online to find out about homelessness, see what support is available, and see what you can do to help.</p>
+      <p>Street Support Network connects local people and organisations in order to support those who need it the most. </p>
+      <p>This website is an online hub to find out about homelessness, see what support is available, and see what you can do to help.</p>
+      <p>There are three primary reasons you might use our website:</p>
       <ul>
         <li>
-          <a href="/find-help/">Find Help</a>: See what support services are available near you, how to access them, and where there are gaps.</li>
+          <p>To <a target="_blank" href="/find-help">Find Help</a>: Get advice and see what support services are available near you, how to access them, and where there are gaps.</p></li>
         <li>
-          <a href="/give-help/">Give Help</a>: See how you can help organisations to provide better support - volunteer, offer items, or donate money.</li>
+          <p>To <a target="_blank" href="/give-help">Give Help</a>: See how you can help organisations to provide better support - volunteer, offer items, or donate money.</p>
         <li>
-          <a href="http://news.streetsupport.net/">News</a>: Understand more about homelessness in your area, what is being done, and where the challenges and opportunities are.</li>
+          <p>To <a target="_blank" href="https://news.streetsupport.net/">Learn</a>: Understand more about homelessness in your area, what is being done, and where the challenges and opportunities are.</p></li>
       </ul>
-      <p>We also work offline, connecting people to co-produce better solutions, facilitating conversation and co-ordinating action. Everything we do starts by listening to people with personal insight into homelessness and frontline workers. We use research, co-production, human centered design and creative technology to develop tools and improve systems. Here is the story of <a href="/about/how-this-started/">how this started.</a></p>
+      <p>We also work offline, connecting people to co-produce better solutions, facilitating conversation and co-ordinating action. </p>
+      <p>We’re a people-led network, where individuals with personal insight into homelessness and poverty, decision makers and people with resources co-create effective solutions together.</p>
+      <p>Through research, collaboration, human-centered design and creative technology, we work to develop tools and improve systems.</p>
+      <p>If you’d like to find out more about why we do what we do, check out this piece that our co-founder, Viv Slack, has written about <a href="/about/how-this-started/">how it all started</a>.</p>
     </div>
 
     {{> divider }}
@@ -48,51 +51,25 @@ page: about
     <div class="block__content">
 
       <h2 class="h2">Our Organisation</h2>
-      <p>Street Support Network Ltd is a Registered Charity [1177546]. We have been funded by donations from local philanthropists and friends, small grants, and business sponsorship. In order to continue to develop and support this network, and to provide employment for people experiencing homelessness, we need businesses to partner with us. If you are interested in supporting us, please contact Gary at <a href="mailto:gary@streetsupport.net">gary@streetsupport.net</a>.</p>
+      <p>Street Support Network Ltd is a Registered Charity [1177546]. We have been funded by donations from local philanthropists and friends, small grants, and business sponsorship. In order to continue developing and growing our network, we’re always on the lookout for businesses to partner with us. If you are interested in learning more about what that might look like, check out our <a href="/give-help/business-support">Business Partnerships</a> page.</p>
 
       <h2 class="h2">Our Team</h2>
-      <p>We have a core team of 6 people based in Manchester, 2 of us have lived experience of homelessness. Each location we are active in has a local co-ordinator, supported by organisations and volunteers.</p>
-      <a href="/about/our-team/" class="btn btn--brand-d btn--in-copy">
-        <span class="btn__text">About our team</span>
-      </a>
-      <p>In addition we have a board of trustees, a range of advisors and some dedicated volunteers, bringing different skills and experiences.</p>
-      <a href="/about/our-trustees/" class="btn btn--brand-d btn--in-copy">
-        <span class="btn__text">About our trustees</span>
-      </a>
+      <p>We have a <a href="/about/our-team">core team</a> of four people, each with our own specialisms. Each location we are active in has a local co-ordinator, supported by organisations and volunteers.</p>
+      <p>In addition we have a <a href="/about/our-trustees">board of trustees</a>, a range of advisors and some dedicated volunteers, bringing different skills and experiences.</p>
 
 
       <h2 class="h2">Partnerships</h2>
-      <p>We work in partnership with people experiencing homelessess, charities and voluntary groups, public and private sector, and concerned citizens. Together we co-produce new features to meet different needs, and are continually improving the site based on user feedback. In addition to providing the online network, we also work behind the scenes to connect people and facilitate collaborative workshops.</p>
-      <div class="split__element text-center">
-        <a href="/manchester/manchester-homelessness-partnership">
-          {{>icon name="partnershipLogo" class="partnership__icon" }}
-        </a>
-      </div>
-      <a href="/manchester/manchester-homelessness-partnership" class="btn btn--brand-d btn--in-copy">
-        <span class="btn__text">About Manchester Homelessness Partnership</span>
-      </a>
+      <p>So much of what we do comes down to our partnerships. We work in partnership with people experiencing homelessness, charities, voluntary groups, public and private sector, and just generally people who care.</p>
+      <p>Together we co-produce new features to meet different needs, and are continually improving the site based on user feedback. In addition to providing the online network, we also work behind the scenes to connect people and facilitate collaborative workshops with our wider network.</p>
 
       <h2 class="h2">Organisations</h2>
-      <p>The network includes organisations from across different sectors that provide useful services for people who are homeless.
-        As a trusted source of information, the local network set minimum standards around who is included - see our standards
-        toolkit for information on the criteria we use in Manchester.</p>
-      <a href="/about/organisations/" class="btn btn--brand-d btn--in-copy">
+      <p>Our network includes organisations from all over the UK and across loads of different sectors that provide useful services for people who are experiencing, or at risk of experiencing homelessness. Because some of our users can be in quite vulnerable situations, we have to be really careful that where we’re pointing them is the right direction. Because of this, we do have a standards toolkit. If you’re curious, you can see the criteria we use in Manchester.</p>
+      <a href="/manchester/standards-toolkit/" class="btn btn--brand-d btn--in-copy">
         <span class="btn__text">Information for organisations</span>
       </a>
 
       <h2 class="h2">Information Quality</h2>
-      <p>Please note, all information is provided by organisations in the network, so while we make every effort to ensure it
-        is kept up to date, we can't always guarantee the accuracy of information that is entered by third parties. Please
-        <a href="/about/contact">get in touch</a> if you spot anything that is incorrect or missing.</p>
-      <a href="/about/contact" class="btn btn--brand-d btn--in-copy">
-        <span class="btn__text">Tell us about an issue</span>
-      </a>
-
-      <h2 class="h2">Support Us</h2>
-      <p>We are a small, independent team and rely on funding from businesses and individuals to keep running.</p>
-      <a href="https://www.justgiving.com/streetsupportnetwork" class="btn btn--brand-d">
-        <span class="btn__text">Donate to Street Support</span>
-      </a>
+      <p>All the service information on the site is provided by organisations in our network, so while we really try to make sure it’s kept up to date, we can't always guarantee the accuracy of information that is entered by third parties. Please <a href="/about/contact">get in touch</a> if you spot anything that is incorrect or missing.</p>
 
     </div>
     {{> divider }}
