adds chelmsford logos

--- a/src/partials/chelmsford/supporters.hbs
+++ b/src/partials/chelmsford/supporters.hbs
@@ -2,9 +2,21 @@
 <h2 class="h2">Supported by&hellip;</h2>
 <ul class="partners__list">
   <li class="partners__logo partners__logo--aru-chelmsford"><a href="https://aru.ac.uk/student-life/life-on-campus/chelmsford-campus/">{{> icon name="aru-chelmsford"}}</a></li>
-  <li class="partners__logo partners__logo--c2bk"><a href="https://www.c2bk.co.uk/">{{> icon name="c2bk"}}</a></li>
-  <li class="partners__logo partners__logo--chess-chelmsford"><a href="https://chesshomeless.org/">{{> icon name="chess"}}</a></li>
   <li class="partners__logo partners__logo--co-op-cf"><a href="https://causes.coop.co.uk/">{{> icon name="co-op"}}</a></li>
   <li class="partners__logo partners__logo--essex-cf"><a href="https://www.essexcommunityfoundation.org.uk/">{{> icon name="essex-cf"}}</a></li>
+  <li class="partners__logo partners__logo--c2bk"><a href="https://www.c2bk.co.uk/">{{> icon name="c2bk"}}</a></li>
   <li class="partners__logo partners__logo--high-sheriff"><a href="https://highsheriffs.com/essex/">{{> icon name="high-sheriff"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-city-co"><a href="https://www.chelmsford.gov.uk">{{> icon name="chelmsford-city-co"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-foodcycle"><a href="https://foodcycle.org.uk/location/foodcycle-chelmsford/">{{> icon name="chelmsford-foodcycle"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-housing-dilemmas"><a href="https://www.housingdilemmas.org.uk">{{> icon name="chelmsford-housing-dilemmas"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-ideas-hub"><a href="https://www.ideashubchelmsford.org">{{> icon name="chelmsford-ideas-hub"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-nightstop-essex"><a href="https://www.depaul.org.uk/nightstop/nightstop-essex/">{{> icon name="chelmsford-nightstop-essex"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-open-road"><a href="https://www.openroad.org.uk/our-services/our-centres/chelmsford-centre/">{{> icon name="chelmsford-open-road"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-peabody"><a href="https://www.peabody.org.uk/news-views/2021/jul/essex-outreach">{{> icon name="chelmsford-peabody"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-phoenix-futures"><a href="https://www.phoenix-futures.org.uk">{{> icon name="chelmsford-phoenix-futures"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-safer-chelmsford"><a href="https://www.chelmsford.gov.uk/communities/community-safety/safer-chelmsford-partnership/">{{> icon name="chelmsford-safer-chelmsford"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-sanctus"><a href="hhttps://sanctus-home.com">{{> icon name="chelmsford-sanctus"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-streetfood"><a href="#">{{> icon name="chelmsford-streetfood"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-the-change-project"><a href="https://www.thechange-project.org">{{> icon name="chelmsford-the-change-project"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-warm-hearts"><a href="https://www.facebook.com/groups/349937218965589/?locale=en_GB">{{> icon name="chelmsford-warm-hearts"}}</a></li>
 </ul>
