--- a/src/scss/partials/_partners.scss
+++ b/src/scss/partials/_partners.scss
@@ -216,6 +216,110 @@
       }
     }
 
+    &--chelmsford-city-co {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/chelmsford-city-co.png);
+      }
+    }
+
+    &--chelmsford-foodcycle {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/foodcycle.png);
+      }
+    }
+
+    &--chelmsford-housing-dilemmas {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/housing-dilemmas.jpg);
+      }
+    }
+
+    &--chelmsford-ideas-hub {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/ideas-hub.jpg);
+      }
+    }
+
+    &--chelmsford-nightstop-essex {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/nightstop-essex.png);
+      }
+    }
+
+    &--chelmsford-open-road {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/open-road.png);
+      }
+    }
+
+    &--chelmsford-peabody {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/peabody.png);
+      }
+    }
+
+    &--chelmsford-phoenix-futures {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/phoenix-futures.jpg);
+      }
+    }
+
+    &--chelmsford-safer-chelmsford {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/safer-chelmsford.jpg);
+      }
+    }
+
+    &--chelmsford-sanctus {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/snctus.jpg);
+      }
+    }
+
+    &--chelmsford-streetfood {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/streetfood.jpg);
+      }
+    }
+
+    &--chelmsford-the-change-project {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/the-change-project.png);
+      }
+    }
+
+    &--chelmsford-warm-hearts {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/warm-hearts.jpg);
+      }
+    }
+
     //dudley
 
     &--dudley-council {
