updates change liverpool banner

--- a/src/partials/locations/banners/change-liverpool.hbs
+++ b/src/partials/locations/banners/change-liverpool.hbs
@@ -1,11 +1,13 @@
 <div class="block block--change-liverpool">
   <div class="container">
     <div class="block__change-liverpool">
-      <img src="/assets/img/liverpool-logos/change-liverpool-logo.png" width="100%" alt="change liverpool logo" />
+      <a target="_blank" href="https://www.changeliverpool.co.uk/">
+        <img src="/assets/img/liverpool-logos/change-liverpool-logo.png" width="100%" alt="change liverpool logo" />
+      </a>
     </div>
     <div class="home__copy home__copy--change-liverpool">
       <h1>Change Liverpool</h1>
-      <p><a class="bold" target="_blank" href="https://www.changeliverpool.co.uk/">Change Liverpool</a> is a campaign to show how donations can be better used to help more people, and give those who are rough sleepers a better chance.</p>
+      <p>Change Liverpool is a campaign to show how donations can be better used to help more people, and give those who are rough sleepers a better chance.</p>
       <p>If you want your donations to go further and help more rough sleepers, then please donate to Change Liverpool. You can donate via JustGiving.</p>
       <a class="btn btn--change-liverpool" target="_blank" href="https://justgiving.com/campaign/changeliverpool">
         <span class="btn__text">Donate Now</span>
