--- a/src/scss/partials/_btn.scss
+++ b/src/scss/partials/_btn.scss
@@ -188,7 +188,7 @@
 
   &--change-liverpool {
     .btn__text {
-      background-color: $change-liverpool;
+      background-color: #1c1c1c;
       color: #fff;
       box-shadow: 0px 3px 0px 0px darken( $change-liverpool, 15% );
 
