updates cov warm weather swep

--- a/src/pages/coventry/severe-weather-accommodation/index.hbs
+++ b/src/pages/coventry/severe-weather-accommodation/index.hbs
@@ -26,6 +26,11 @@ location: coventry
 <div class="block">
   <div class="container">
     <div class="block__content">
+
+      <h3 class="h2">Hot weather provisions</h3>
+      <p>Due to the hot weather that has been forecast for over the recently, SWEP has been activated with immediate effect, please advise anyone sleeping rough to go to STEPs for change (City Arcade, Coventry CV1 3HX) or to Harnall Lifehouse (44 Harnall Ln W, Coventry CV1 4EZ) for shade, sun cream and refreshments.</p>
+
+      <h3 class="h2">Cold weather provisions</h3>
       <p>During the colder months SWEP means that you don't need to rough sleep. If you are rough sleeping and the temperature drops to freezing, or rain or snow is severe you can access somewhere to sleep for the night.</p>
 
       <p>You can present at <span class="bold">The Salvation Army, Harnall Lane West, CV1 4EZ, <a href="tel:02477714443">024 7771 4443</a></span> (town side of the Foleshill Rd, opposite the canal and hear Halfords) or call the out of hours emergency number - <a href="tel:02476832222">024 7683 2222</a>.</p>
