updates cambs street aid link

--- a/src/partials/locations/banners/street-aid.hbs
+++ b/src/partials/locations/banners/street-aid.hbs
@@ -5,7 +5,7 @@
       <iframe class="street-aid-video" src="https://www.youtube.com/embed/dpX2zdyBes8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <div class="home__copy home__copy--cambridge-street-aid">
-      <a href="http://cambscf.org.uk/cambridge-street-aid.html">
+      <a href="https://cambscf.org.uk/cambridge-street-aid">
         <img src="/assets/img/cambridge-logos/cambridge-street-aid-logo.png" width="100%" alt="cambridge street aid logo"/>
       </a>
       <p>We are asking people who live, work and study in Cambridge to give to the Street Aid fund to help people leave the streets behind. Every single penny goes towards a grant to help someone get off, and stay off, the streets.</p>
