updates chelmsford documents

--- a/src/partials/chelmsford/supporters.hbs
+++ b/src/partials/chelmsford/supporters.hbs
@@ -14,6 +14,7 @@
   <li class="partners__logo partners__logo--chelmsford-open-road"><a href="https://www.openroad.org.uk/our-services/our-centres/chelmsford-centre/">{{> icon name="chelmsford-open-road"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-peabody"><a href="https://www.peabody.org.uk/news-views/2021/jul/essex-outreach">{{> icon name="chelmsford-peabody"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-phoenix-futures"><a href="https://www.phoenix-futures.org.uk">{{> icon name="chelmsford-phoenix-futures"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-pnc"><a href="https://www.chelmsfordcityhealthpcn.nhs.uk/">{{> icon name="chelmsford-pnc"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-safer-chelmsford"><a href="https://www.chelmsford.gov.uk/communities/community-safety/safer-chelmsford-partnership/">{{> icon name="chelmsford-safer-chelmsford"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-sanctus"><a href="hhttps://sanctus-home.com">{{> icon name="chelmsford-sanctus"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-streetfood"><a href="#">{{> icon name="chelmsford-streetfood"}}</a></li>
