updates nottingham banner order

--- a/src/pages/nottingham/index.hbs
+++ b/src/pages/nottingham/index.hbs
@@ -36,6 +36,8 @@ location: nottingham
 
 <div id="js-swep-output"></div>
 
+{{> locations/banners/street-aid-notts }}
+
 <div class="cta--money-advice">
   <div class="container text-center">
     <p class="sleeping-rough-title__content" style="color: #fff; margin-bottom: 0px;">Need financial advice about benefits, debt and more?</p>
@@ -73,9 +75,8 @@ location: nottingham
   </div>
 </div>
 
-{{> locations/banners/street-aid-notts }}
 
-{{> locations/banners/warm-spaces-notts }}
+{{!-- {{> locations/banners/warm-spaces-notts }} --}}
 
 {{> locations/banners/notts-food-rota }}
 
