adds logos to chelmsford

--- a/src/partials/chelmsford/supporters.hbs
+++ b/src/partials/chelmsford/supporters.hbs
@@ -10,11 +10,12 @@
   <li class="partners__logo partners__logo--chelmsford-foodcycle"><a href="https://foodcycle.org.uk/location/foodcycle-chelmsford/">{{> icon name="chelmsford-foodcycle"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-housing-dilemmas"><a href="https://www.housingdilemmas.org.uk">{{> icon name="chelmsford-housing-dilemmas"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-ideas-hub"><a href="https://www.ideashubchelmsford.org">{{> icon name="chelmsford-ideas-hub"}}</a></li>
-  <li class="partners__logo partners__logo--chelmsford-nightstop-essex"><a href="https://www.depaul.org.uk/nightstop/nightstop-essex/">{{> icon name="chelmsford-nightstop-essex"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-iss"><a href="https://www.iss.org.uk/">{{> icon name="chelmsford-iss"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-open-road"><a href="https://www.openroad.org.uk/our-services/our-centres/chelmsford-centre/">{{> icon name="chelmsford-open-road"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-pcn"><a href="https://www.chelmsfordcityhealthpcn.nhs.uk/">{{> icon name="chelmsford-pcn"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-peabody"><a href="https://www.peabody.org.uk/news-views/2021/jul/essex-outreach">{{> icon name="chelmsford-peabody"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-phoenix-futures"><a href="https://www.phoenix-futures.org.uk">{{> icon name="chelmsford-phoenix-futures"}}</a></li>
-  <li class="partners__logo partners__logo--chelmsford-pnc"><a href="https://www.chelmsfordcityhealthpcn.nhs.uk/">{{> icon name="chelmsford-pnc"}}</a></li>
+  <li class="partners__logo partners__logo--chelmsford-rama"><a href="https://www.chelmsfordcityhealthpcn.nhs.uk/">{{> icon name="chelmsford-rama"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-safer-chelmsford"><a href="https://www.chelmsford.gov.uk/communities/community-safety/safer-chelmsford-partnership/">{{> icon name="chelmsford-safer-chelmsford"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-sanctus"><a href="hhttps://sanctus-home.com">{{> icon name="chelmsford-sanctus"}}</a></li>
   <li class="partners__logo partners__logo--chelmsford-streetfood"><a href="#">{{> icon name="chelmsford-streetfood"}}</a></li>
