--- a/src/scss/partials/_partners.scss
+++ b/src/scss/partials/_partners.scss
@@ -248,6 +248,14 @@
       }
     }
 
+    &--chelmsford-iss {
+      width: 100px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/chelmsford-iss.jpg);
+      }
+    }
+
     &--chelmsford-nightstop-essex {
       width: 100px;
 
@@ -261,6 +269,14 @@
 
       a {
         background-image: url(/assets/img/chelmsford-logos/open-road.png);
+      }
+    }
+
+    &--chelmsford-pcn {
+      width: 190px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/chelmsford-pcn.jpg);
       }
     }
 
@@ -285,6 +301,14 @@
 
       a {
         background-image: url(/assets/img/chelmsford-logos/pnc.jpg);
+      }
+    }
+
+    &--chelmsford-rama {
+      width: 250px;
+
+      a {
+        background-image: url(/assets/img/chelmsford-logos/chelmsford-rama.png);
       }
     }
 
