--- a/src/partials/locations/banners/print-map-banner-leeds.hbs
+++ b/src/partials/locations/banners/print-map-banner-leeds.hbs
@@ -9,7 +9,7 @@
   <div class="home__copy home__copy--leeds-print-map">
     <h1>Leeds Food Aid Network (FAN)</h1>
     <p>There's a great new document that lists the locations of food provision services for those who need them in Leeds.</p>
-    <a class="btn btn--brand-e" target="_blank" href="https://docs.google.com/document/d/1i2oxqiACc4xse3mwQ9lGbJC4AD-AXcXHTmlmrmZcG5g/edit">
+    <a class="btn btn--brand-e" target="_blank" href="https://leedsfoodaidnetwork.co.uk/find-emergency-food/">
       <span class="btn__text">View the list</span>
     </a>
   </div>
