updates wolves rough sleeping advice

--- a/src/pages/wolverhampton/index.hbs
+++ b/src/pages/wolverhampton/index.hbs
@@ -43,7 +43,7 @@ location: wolverhampton
         <img class="sleeping-rough-title__icon" src="/assets/img/exclamation.svg" alt="exclamation-icon">
         <h1 class="sleeping-rough-title__heading">Help someone sleeping rough</h1>
       </div>
-      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Wolverhampton, you can let the council know by contacting the P3 outreach team on <a href="tel:01183042077">0118 304 2077</a>.</p>
+      <p class="sleeping-rough-title__content">If you are worried about someone you’ve seen sleeping rough in Wolverhampton, let the local Rough Sleeper Outreach Team know via Streetlink by downloading the <a href="https://www.streetlink.org.uk/">Streetlink app</a>.</p>
       <a class="btn btn--brand-e btn--emergency-advice" href="/wolverhampton/advice">
         <span class="btn__text">See more emergency advice</span>
       </a>
