fixes typo support

--- a/src/pages/about/index.hbs
+++ b/src/pages/about/index.hbs
@@ -1,6 +1,6 @@
 ---
 title: About Us - Street Support
-description: Street support makes it easier to help people facing homelessness. Here is more information about how it works.
+description: Street Support makes it easier to help people facing homelessness. Here is more information about how it works.
 image: https://streetsupport.net/assets/img/og/street-support.jpg
 layout: default.hbs
 permalink: false
